--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
   },
   "type": "module",
   "dependencies": {
+    "@chakra-ui/react": "^2.10.3",
+    "@crxjs/vite-plugin": "^1.0.14",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "2.0.0-beta.25",
     "@types/chrome": "^0.0.278",
     "@types/node": "^20.12.11",
     "@types/react": "^18.3.1",
@@ -26,7 +33,7 @@
     "@types/webextension-polyfill": "^0.10.7",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -40,6 +47,6 @@
     "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "vite": "^5.4.9"
+    "vite": "^2.9.15"
   }
 }
